[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "molecule_driver_libvirt"
description = "Molecule driver to use Libvirt."
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=3.0",
    "libvirt-python",
    "lxml",
    "molecule>=24.2",
    "passlib",
]

[project.optional-dependencies]
tests = [
    "pytest-helpers-namespace",
    "molecule[test]",
]

[project.entry-points."molecule.driver"]
molecule_libvirt = "molecule_driver_libvirt.driver:Libvirt"

[tool.setuptools.package-data]
molecule_driver_libvirt = [
    "driver.json",
    "playbooks/**.yml",
    "playbooks/**.j2",
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/molecule_driver_libvirt/_version.py"
